# Commotransfer

./: README.md
Commotransfer/: CMakeLists.txt  MANUAL.md  README.md  build.sh
Commotransfer/scripts/: setup_opencbm.sh
Commotransfer/src/: DropZone.cpp  DropZone.h  MainWindow.cpp  MainWindow.h  OpenCBMWrapper.cpp  OpenCBMWrapper.h  SetupWizard.cpp  SetupWizard.h  TransferWorker.cpp  TransferWorker.h  main.cpp
